PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <label>재고</label>
    <nameField>
        <label>재고코드</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>