PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>제조사</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsTypePurchase__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>재고</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>