PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Assemset_Seq__c.field-meta.xml
<CustomField>
    <fullName>Assemset_Seq__c</fullName>
    <label>Assemset_Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>