PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/CntDisuse__c.field-meta.xml
<CustomField>
    <fullName>CntDisuse__c</fullName>
    <defaultValue>0</defaultValue>
    <label>폐기수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>