PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/CntError__c.field-meta.xml
<CustomField>
    <fullName>CntError__c</fullName>
    <label>x에러수량</label>
    <summarizedField>ProcessProductDetail__c.CntError__c</summarizedField>
    <summaryForeignKey>ProcessProductDetail__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>