PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/CntImportInspection__c.field-meta.xml
<CustomField>
    <fullName>CntImportInspection__c</fullName>
    <label>수입검사수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>