PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/CntInventory__c.field-meta.xml
<CustomField>
    <fullName>CntInventory__c</fullName>
    <formula>CntImport__c - CntUsed__c - CntError__c - CntDisuse__c - CntShipment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>x재고수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>