PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/CntOrgInventory__c.field-meta.xml
<CustomField>
    <fullName>CntOrgInventory__c</fullName>
    <description>트리거로 처리되는 tray, box일 경우 포함되어 있는 원 재고의 수량</description>
    <inlineHelpText>Tray, Box일 경우 포함되어 있는 원 재고의 수량</inlineHelpText>
    <label>제품품목 수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>