PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/CntOutSoursing__c.field-meta.xml
<CustomField>
    <fullName>CntOutSoursing__c</fullName>
    <label>외주처리 수량</label>
    <summarizedField>Outsoursing__c.CntOutSoursing__c</summarizedField>
    <summaryForeignKey>Outsoursing__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>