PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/CntShipment__c.field-meta.xml
<CustomField>
    <fullName>CntShipment__c</fullName>
    <label>출하수량</label>
    <summarizedField>ShipmentDetail__c.Count__c</summarizedField>
    <summaryForeignKey>ShipmentDetail__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>