PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/CntUsed2__c.field-meta.xml
<CustomField>
    <fullName>CntUsed2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>사용수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>