PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/CntUsed__c.field-meta.xml
<CustomField>
    <fullName>CntUsed__c</fullName>
    <label>x사용수량</label>
    <summarizedField>ProcessProductDetail__c.CntUsed__c</summarizedField>
    <summaryForeignKey>ProcessProductDetail__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>