PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/DateImportInspection__c.field-meta.xml
<CustomField>
    <fullName>DateImportInspection__c</fullName>
    <label>수입검사일시</label>
    <type>Date</type>
</CustomField>