PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/DateManufacture__c.field-meta.xml
<CustomField>
    <fullName>DateManufacture__c</fullName>
    <label>제조일</label>
    <type>Date</type>
</CustomField>