PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/DateRequestImportInspection__c.field-meta.xml
<CustomField>
    <fullName>DateRequestImportInspection__c</fullName>
    <label>수입검사의뢰일</label>
    <type>Date</type>
</CustomField>