PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/IsAbleTrace__c.field-meta.xml
<CustomField>
    <fullName>IsAbleTrace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAbleTrace</label>
    <type>Checkbox</type>
</CustomField>