PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/IsSendTrace__c.field-meta.xml
<CustomField>
    <fullName>IsSendTrace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSendTrace</label>
    <type>Checkbox</type>
</CustomField>