PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>품목</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>재고</relationshipLabel>
    <relationshipName>Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>