PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Item_PartEtc__c.field-meta.xml
<CustomField>
    <fullName>Item_PartEtc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>개발페이지에서만 사용됨 (필터:부품, 제공품)</description>
    <label>품목_(부품,재공품)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Item__c.Type__c</field>
            <operation>equals</operation>
            <value>부품, 재공품</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>재고 (품목_(부품,재공품))</relationshipLabel>
    <relationshipName>Inventory_PartEtc</relationshipName>
    <type>Lookup</type>
</CustomField>