PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Item_Product__c.field-meta.xml
<CustomField>
    <fullName>Item_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>개발페이지에서만 사용됨 (필터, 제품)</description>
    <label>품목_Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Item__c.Type__c</field>
            <operation>equals</operation>
            <value>제품</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>재고 (품목_Product)</relationshipLabel>
    <relationshipName>Inventory_Product</relationshipName>
    <type>Lookup</type>
</CustomField>