PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/ItemCode__c.field-meta.xml
<CustomField>
    <fullName>ItemCode__c</fullName>
    <formula>Item__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>품목코드</label>
    <type>Text</type>
</CustomField>