PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <description>품목의 품목구분</description>
    <formula>TEXT(Item__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>품목구분</label>
    <type>Text</type>
</CustomField>