PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/LetDelete__c.field-meta.xml
<CustomField>
    <fullName>LetDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRA_PARTS 에 삭제처리를 해야 하는지 구분하는 필드</description>
    <label>LetDelete</label>
    <type>Checkbox</type>
</CustomField>