PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/NameForDuplication__c.field-meta.xml
<CustomField>
    <fullName>NameForDuplication__c</fullName>
    <description>중복체크를 위한 시스템 필드</description>
    <externalId>true</externalId>
    <inlineHelpText>중복체크를 위한 시스템 필드</inlineHelpText>
    <label>재고코드(중복검사를위함)</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>