PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/OrgItem__c.field-meta.xml
<CustomField>
    <fullName>OrgItem__c</fullName>
    <description>Tray, Box일경우 안에 포함되어 있는 제품</description>
    <formula>HYPERLINK(&apos;/&apos; &amp; Item__r.ProductItem__c,  Item__r.ProductItem__r.Name )</formula>
    <inlineHelpText>Tray, Box일경우 안에 포함되어 있는 제품</inlineHelpText>
    <label>제품품목</label>
    <type>Text</type>
</CustomField>