PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/OwnerImportInspection__c.field-meta.xml
<CustomField>
    <fullName>OwnerImportInspection__c</fullName>
    <label>수입검사 담당자</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>박광성</fullName>
                <default>true</default>
                <label>박광성</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>