PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/ParentInventory__c.field-meta.xml
<CustomField>
    <fullName>ParentInventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>현재 재고가 Tray나 Box로 보관중일 경우 어떤 Tray 또는 Box 인지?</description>
    <inlineHelpText>현재 재고가 Tray나 Box로 보관중일 경우 어떤 Tray 또는 Box 인지?</inlineHelpText>
    <label>상위재고</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>재고</relationshipLabel>
    <relationshipName>ChildInventory</relationshipName>
    <type>Lookup</type>
</CustomField>