PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/PartList__c.field-meta.xml
<CustomField>
    <fullName>PartList__c</fullName>
    <description>부품이 아닐경우 이 재고를 제작하는데 사용한 재고 코드 모음 (쉼표(,) 로 구분)</description>
    <label>PartList</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>