PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_1streflowstate__c.field-meta.xml
<CustomField>
    <fullName>Pba_1streflowstate__c</fullName>
    <label>STREF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>