PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_2ndreflowstate__c.field-meta.xml
<CustomField>
    <fullName>Pba_2ndreflowstate__c</fullName>
    <label>NDREF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>