PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_aoi2_date__c.field-meta.xml
<CustomField>
    <fullName>Pba_aoi2_date__c</fullName>
    <label>AOI측정일</label>
    <type>Date</type>
</CustomField>