PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_aoi2_result__c.field-meta.xml
<CustomField>
    <fullName>Pba_aoi2_result__c</fullName>
    <label>두번째 AOI 결과</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>