PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_aoi_result__c.field-meta.xml
<CustomField>
    <fullName>Pba_aoi_result__c</fullName>
    <label>AOI검사 결과값</label>
    <length>100</length>
    <type>Text</type>
</CustomField>