PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_backprintdate__c.field-meta.xml
<CustomField>
    <fullName>Pba_backprintdate__c</fullName>
    <label>뒷면인쇄일</label>
    <type>Date</type>
</CustomField>