PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_completion__c.field-meta.xml
<CustomField>
    <fullName>Pba_completion__c</fullName>
    <label>완료유무</label>
    <length>10</length>
    <type>Text</type>
</CustomField>