PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_completiondate__c.field-meta.xml
<CustomField>
    <fullName>Pba_completiondate__c</fullName>
    <label>완료일</label>
    <type>Date</type>
</CustomField>