PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_delete__c.field-meta.xml
<CustomField>
    <fullName>Pba_delete__c</fullName>
    <label>폐기유무(Y/N)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>