PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_deletedate__c.field-meta.xml
<CustomField>
    <fullName>Pba_deletedate__c</fullName>
    <label>폐기일</label>
    <type>Date</type>
</CustomField>