PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_deleter__c.field-meta.xml
<CustomField>
    <fullName>Pba_deleter__c</fullName>
    <label>폐기자</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>