PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_deletereason__c.field-meta.xml
<CustomField>
    <fullName>Pba_deletereason__c</fullName>
    <label>폐기사유</label>
    <length>200</length>
    <type>Text</type>
</CustomField>