PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_frontprintdate__c.field-meta.xml
<CustomField>
    <fullName>Pba_frontprintdate__c</fullName>
    <label>앞면인쇄일</label>
    <type>Date</type>
</CustomField>