PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_frontprintmachine__c.field-meta.xml
<CustomField>
    <fullName>Pba_frontprintmachine__c</fullName>
    <label>앞면인쇄기기</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>