PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_ict_date__c.field-meta.xml
<CustomField>
    <fullName>Pba_ict_date__c</fullName>
    <label>ICT검사</label>
    <type>Date</type>
</CustomField>