PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_ict_result__c.field-meta.xml
<CustomField>
    <fullName>Pba_ict_result__c</fullName>
    <label>ICT검사 결과값</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>