PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_spi_date__c.field-meta.xml
<CustomField>
    <fullName>Pba_spi_date__c</fullName>
    <label>SPI검사일</label>
    <type>Date</type>
</CustomField>