PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_spi_file__c.field-meta.xml
<CustomField>
    <fullName>Pba_spi_file__c</fullName>
    <label>SPI파일</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>