PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Pba_spi_result__c.field-meta.xml
<CustomField>
    <fullName>Pba_spi_result__c</fullName>
    <label>SPI검사값</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>