PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/PrevLotNo2__c.field-meta.xml
<CustomField>
    <fullName>PrevLotNo2__c</fullName>
    <description>입고시 기존 두번째 LotNo 기록</description>
    <label>Lot No 기록2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>