PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/PrevLotNo__c.field-meta.xml
<CustomField>
    <fullName>PrevLotNo__c</fullName>
    <label>Lot No 기록</label>
    <length>100</length>
    <type>Text</type>
</CustomField>