PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/ProcessProduct__c.field-meta.xml
<CustomField>
    <fullName>ProcessProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>생산공정</label>
    <referenceTo>ProcessProduct__c</referenceTo>
    <relationshipLabel>재고</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>