PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_adapter__c.field-meta.xml
<CustomField>
    <fullName>Product_adapter__c</fullName>
    <label>소요 Adapter Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>