PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_Aoi__c.field-meta.xml
<CustomField>
    <fullName>Product_Aoi__c</fullName>
    <label>AOI결과값</label>
    <length>10</length>
    <type>Text</type>
</CustomField>