PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_Aoi_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Aoi_Date__c</fullName>
    <label>AOI측정일</label>
    <type>Date</type>
</CustomField>