PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_body__c.field-meta.xml
<CustomField>
    <fullName>Product_body__c</fullName>
    <label>소요 Body Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>