PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_cell__c.field-meta.xml
<CustomField>
    <fullName>Product_cell__c</fullName>
    <label>소요 Cell Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>