PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>Product_CompletionDate__c</fullName>
    <label>공정완료일</label>
    <type>Date</type>
</CustomField>