PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_eol__c.field-meta.xml
<CustomField>
    <fullName>Product_eol__c</fullName>
    <label>EOL측정값</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>