PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_eol_date__c.field-meta.xml
<CustomField>
    <fullName>Product_eol_date__c</fullName>
    <label>향후테스트</label>
    <type>Date</type>
</CustomField>