PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_eolfile__c.field-meta.xml
<CustomField>
    <fullName>Product_eolfile__c</fullName>
    <label>EOL파일</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>