PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_EolPassFail__c.field-meta.xml
<CustomField>
    <fullName>Product_EolPassFail__c</fullName>
    <label>Product_EolPassFail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>