PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_fail__c.field-meta.xml
<CustomField>
    <fullName>Product_fail__c</fullName>
    <label>기타여유분_fail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>