PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_faildate__c.field-meta.xml
<CustomField>
    <fullName>Product_faildate__c</fullName>
    <label>기타여유분_date</label>
    <type>Date</type>
</CustomField>