PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_InnerRubber__c.field-meta.xml
<CustomField>
    <fullName>Product_InnerRubber__c</fullName>
    <label>소요 이너러버 code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>