PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_lineoutdate__c.field-meta.xml
<CustomField>
    <fullName>Product_lineoutdate__c</fullName>
    <label>출고일</label>
    <type>Date</type>
</CustomField>