PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_marking_date__c.field-meta.xml
<CustomField>
    <fullName>Product_marking_date__c</fullName>
    <label>마킹 날짜</label>
    <type>Date</type>
</CustomField>