PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_partlist__c.field-meta.xml
<CustomField>
    <fullName>Product_partlist__c</fullName>
    <label>제품 부품리스트</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>