PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_pba__c.field-meta.xml
<CustomField>
    <fullName>Product_pba__c</fullName>
    <label>소요 PBA Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>