PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_Pba_No__c.field-meta.xml
<CustomField>
    <fullName>Product_Pba_No__c</fullName>
    <description>28까지는 Product_Pba 2개중 앞의것을 28 초과이면 뒤의것을 사용한다.</description>
    <label>PCB TRAY의 위치</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>