PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_Remove__c.field-meta.xml
<CustomField>
    <fullName>Product_Remove__c</fullName>
    <label>폐기여부</label>
    <length>10</length>
    <type>Text</type>
</CustomField>