PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_RemoveDate__c.field-meta.xml
<CustomField>
    <fullName>Product_RemoveDate__c</fullName>
    <label>폐기일</label>
    <type>Date</type>
</CustomField>