PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_rubber__c.field-meta.xml
<CustomField>
    <fullName>Product_rubber__c</fullName>
    <label>소요 Rubber Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>