PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_speed2__c.field-meta.xml
<CustomField>
    <fullName>Product_speed2__c</fullName>
    <label>공정 속도 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>