PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_temp1__c.field-meta.xml
<CustomField>
    <fullName>Product_temp1__c</fullName>
    <label>공정 온도측정 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>