PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Product_vision__c.field-meta.xml
<CustomField>
    <fullName>Product_vision__c</fullName>
    <label>기타여유분_vision</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>