PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <label>Seq</label>
    <length>2</length>
    <type>Text</type>
</CustomField>