PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Smtset_Key__c.field-meta.xml
<CustomField>
    <fullName>Smtset_Key__c</fullName>
    <label>Smtset_Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>