PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/StateImportInspection__c.field-meta.xml
<CustomField>
    <fullName>StateImportInspection__c</fullName>
    <label>수입검사 상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>의뢰</fullName>
            </value>
            <value>
                <fullName>합격</fullName>
            </value>
            <value>
                <fullName>불합격</fullName>
            </value>
            <value>
                <fullName>일부합격</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>