PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/TraceabilityPartsId__c.field-meta.xml
<CustomField>
    <fullName>TraceabilityPartsId__c</fullName>
    <externalId>true</externalId>
    <label>TraceabilityPartsId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>