PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/TraceabilityPbaId__c.field-meta.xml
<CustomField>
    <fullName>TraceabilityPbaId__c</fullName>
    <externalId>true</externalId>
    <label>TraceabilityPbaId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>