PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/TraceabilityProductBoxId__c.field-meta.xml
<CustomField>
    <fullName>TraceabilityProductBoxId__c</fullName>
    <description>TRA_PRODUCTBOX SEQ</description>
    <label>TraceabilityProductBoxId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>