PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/TraceabilityProductCodes__c.field-meta.xml
<CustomField>
    <fullName>TraceabilityProductCodes__c</fullName>
    <description>오라클 TRA_PRODUCTBOX에서 넘어올때 BOX안에 들어가는 제품코드들</description>
    <label>TraceabilityProductCodes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>