PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/TraceabilityProductMaster_Code__c.field-meta.xml
<CustomField>
    <fullName>TraceabilityProductMaster_Code__c</fullName>
    <description>TRA_PRODUCT.PRODUCTMASTER_CODE
연계에서 Item과 연결하기 위하여 사용함</description>
    <label>TraceabilityProductMaster_Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>