PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>창고</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>재고</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>