PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/fields/WarehouseType__c.field-meta.xml
<CustomField>
    <fullName>WarehouseType__c</fullName>
    <formula>TEXT(Warehouse__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>창고구분</label>
    <type>Text</type>
</CustomField>