PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>ItemType__c</columns>
    <columns>ItemCode__c</columns>
    <columns>OrgItem__c</columns>
    <columns>CntOrgInventory__c</columns>
    <columns>DateRequestImportInspection__c</columns>
    <columns>ProcessProduct__c</columns>
    <columns>CntInventory2__c</columns>
    <columns>CntShipment__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
    <language>ko</language>
</ListView>