PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/listViews/Filter_PBA.listView-meta.xml
<ListView>
    <fullName>Filter_PBA</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>ItemType__c</columns>
    <columns>Smtset_Key__c</columns>
    <columns>ItemCode__c</columns>
    <columns>OrgItem__c</columns>
    <columns>CntOrgInventory__c</columns>
    <columns>DateRequestImportInspection__c</columns>
    <columns>ProcessProduct__c</columns>
    <columns>CntInventory2__c</columns>
    <columns>CntShipment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ItemType__c</field>
        <operation>equals</operation>
        <value>PBA</value>
    </filters>
    <filters>
        <field>Smtset_Key__c</field>
        <operation>contains</operation>
        <value>_</value>
    </filters>
    <label>Filter_PBA</label>
    <language>ko</language>
</ListView>