PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/listViews/FIlter_Process.listView-meta.xml
<ListView>
    <fullName>FIlter_Process</fullName>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>ItemType__c</columns>
    <columns>ItemCode__c</columns>
    <columns>OrgItem__c</columns>
    <columns>CntOrgInventory__c</columns>
    <columns>DateRequestImportInspection__c</columns>
    <columns>ProcessProduct__c</columns>
    <columns>CntInventory2__c</columns>
    <columns>CntShipment__c</columns>
    <columns>TraceabilityPartsId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WarehouseType__c</field>
        <operation>equals</operation>
        <value>공정</value>
    </filters>
    <label>Filter_공정</label>
    <language>ko</language>
</ListView>