PA_Education/TestMenifest/force-app/main/default/objects/Inventory__c/listViews/Filter_Product.listView-meta.xml
<ListView>
    <fullName>Filter_Product</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Product_fail__c</columns>
    <columns>Item__c</columns>
    <columns>ItemType__c</columns>
    <columns>ItemCode__c</columns>
    <columns>OrgItem__c</columns>
    <columns>CntOrgInventory__c</columns>
    <columns>DateRequestImportInspection__c</columns>
    <columns>ProcessProduct__c</columns>
    <columns>CntInventory2__c</columns>
    <columns>CntShipment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ItemType__c</field>
        <operation>equals</operation>
        <value>제품</value>
    </filters>
    <label>Filter_제품</label>
    <language>ko</language>
</ListView>